<resources>
    <string name="app_name">Minting Time</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b>Sign Up</b></string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_the_club">Welcome to the club</string>
    <string name="sign_in">Sign In</string>
    <string name="proceed_with_your">Proceed with your</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>Sign In</b></string>
</resources>